--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="pt-PT" class="no-js" itemtype="https://schema.org/WebPage" itemscope=""><head>
+	<meta name="facebook-domain-verification" content="mm6ukqjlj7815mj1att3i9d1gubbs9" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<title>eu  Clube Melissa</title>
